--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-router-dom": "^6.4.2",
+    "react-stack-cards": "^1.0.8",
     "sass": "^1.55.0",
     "uikit": "^3.15.10"
   },
@@ -21,7 +22,6 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
-    "@web/rollup-plugin-import-meta-assets": "^1.0.7",
     "vite": "^3.1.0"
   }
 }
