--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.2",
     "react-router-hash-link": "^2.4.3",
     "react-stack-cards": "^1.0.8",
